# azure-terraform-actions-reusable

./: newfile.j2  readme.md  testfile1.txt
.github/workflows/: all.yaml  apply.yaml  build-cloud-tf.yaml  build-pre-commit.yaml  build-trunk.yaml  build.yaml  debug.yaml  plan-conditional-apply.yml  plan.yaml  relative-path.yaml  terraform-destroy.yml
actions/: action.yml
actions-cloud-tf/: action.yml
actions/jinja2-action-1.2.2/: Dockerfile  pyproject.toml
actions/jinja2-action-1.2.3/jinja2-action-1.2.3/: Dockerfile  action.yml  pyproject.toml
precommit-action/: action.yml
