[tool.poetry]
name = "jinja2-action"
version = "0.1.0"
description = "Use the Jinja2 template engine as a GitHub action"

license = "Apache2"

authors = [
    "Paulo Henrique Cuchi <paulo@cuchi.me>"
]

readme = 'README.md'

repository = "https://github.com/cuchi/jinja2-action"
homepage = "https://github.com/cuchi/jinja2-action"

keywords = ['jinja2']
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
j2cli = "0.3.10"
pyyaml = "5.3.1"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.poetry.packages]
include = ["jinja2_action"]